--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   </tr>
 </table>
 <hr>
-<a href="My hobbies.html">My Hobbies</a>
+<a href="My hobbies.html">My Hobbies</a> &nbsp; &nbsp; &nbsp; &nbsp;
  <a href="Contactme.html">Contact me</a>
   </body>
 </html>
