--- a/My hobbies.html
+++ b/My hobbies.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    
     <meta charset="utf-8">
     <title> My Hobbies</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <h3>My Hobbies</h3>
